# mcmc_active

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
dataset/: karate.gml  polblogs_ud.gml
src/: ActiveLearnMain.cpp  CMakeLists.txt  Global.h  Graph.cpp  Graph.h  Learner.cpp  Learner.h  MCMC.cpp  MCMC.h  MCMCAlg.cpp  MCMCAlg.h  Makefile  TypeModel.cpp  TypeModel.h  Utility.cpp  output_functions.h
